red-margin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: red
  namespace: margin
spec:
  type: ExternalName
  externalName: red.default.svc.cluster.local
